// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`a dotted target's arguments (#1642) > runs diverts/dotted-divert-targets-with-arguments.sd from its chunks as the current engine does 1`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Inner 1.",
          ],
        ],
      ],
      "tags": [],
      "text": "Inner 1.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Visit 2 t.",
          ],
        ],
      ],
      "tags": [],
      "text": "Visit 2 t.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Aside 3.",
          ],
        ],
      ],
      "tags": [],
      "text": "Aside 3.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Second 4 b.",
          ],
        ],
      ],
      "tags": [],
      "text": "Second 4 b.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Leave 4.",
          ],
        ],
      ],
      "tags": [],
      "text": "Leave 4.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Last 5.",
          ],
        ],
      ],
      "tags": [],
      "text": "Last 5.
",
    },
  ],
  "continues": 7,
  "errors": [],
  "menus": [],
}
`;

exports[`a flow's parameters on the program engine > binds a branch's parameters, and a scene's before it enters its first branch 1`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Inner 1.",
          ],
        ],
      ],
      "tags": [],
      "text": "Inner 1.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Second 2 b.",
          ],
        ],
      ],
      "tags": [],
      "text": "Second 2 b.
",
    },
  ],
  "continues": 3,
  "errors": [],
  "menus": [],
}
`;

exports[`a flow's parameters on the program engine > binds them for a divert, a tunnel and a thread to the flow, and not for a jump into its middle 1`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Visit by tunnel.",
          ],
        ],
      ],
      "tags": [],
      "text": "Visit by tunnel.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Forked by thread.",
          ],
        ],
      ],
      "tags": [],
      "text": "Forked by thread.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Visit by divert.",
          ],
        ],
      ],
      "tags": [],
      "text": "Visit by divert.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Middle kept.",
          ],
        ],
      ],
      "tags": [],
      "text": "Middle kept.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Middle kept.",
          ],
        ],
      ],
      "tags": [],
      "text": "Middle kept.
",
    },
  ],
  "continues": 6,
  "errors": [],
  "menus": [],
}
`;

exports[`a flow's parameters on the program engine > packs a variadic flow's arguments, padding a missing parameter with nil 1`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Many 1 2.",
          ],
        ],
      ],
      "tags": [],
      "text": "Many 1 2.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "None nil 0.",
          ],
        ],
      ],
      "tags": [],
      "text": "None nil 0.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "None nil 0.",
          ],
        ],
      ],
      "tags": [],
      "text": "None nil 0.
",
    },
  ],
  "continues": 4,
  "errors": [],
  "menus": [],
}
`;

exports[`a flow's parameters on the program engine > passes an onward return's arguments to the flow it goes on to 1`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "In the tunnel.",
          ],
        ],
      ],
      "tags": [],
      "text": "In the tunnel.
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "After by onward 2.",
          ],
        ],
      ],
      "tags": [],
      "text": "After by onward 2.
",
    },
  ],
  "continues": 3,
  "errors": [],
  "menus": [],
}
`;

exports[`a host entering a scene that takes parameters > arranges EvaluateFunction's arguments for the scene's parameters, as the current engine does 1`] = `
{
  "output": "Pair 1 2.
",
  "returned": null,
}
`;

exports[`a host entering a scene that takes parameters > arranges EvaluateFunction's arguments for the scene's parameters, as the current engine does 2`] = `
{
  "output": "Pair 1 nil.
",
  "returned": null,
}
`;

exports[`a host entering a scene that takes parameters > arranges EvaluateFunction's arguments for the scene's parameters, as the current engine does 3`] = `
{
  "output": "Rest 1 2.
",
  "returned": null,
}
`;

exports[`a host entering a scene that takes parameters > arranges EvaluateFunction's arguments for the scene's parameters, as the current engine does 4`] = `
{
  "output": "Rest nil 0.
",
  "returned": null,
}
`;

exports[`a host entering a scene that takes parameters > passes ChoosePathString's arguments for the scene to bind, as the current engine does 1`] = `
"Pair 1 2.
"
`;

exports[`the fixtures that fell back for a flow's parameters > runs builtins/read-count-variable-target.sd from its chunks as the current engine does 1`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Count start - 0 0 0",
          ],
        ],
      ],
      "tags": [],
      "text": "Count start - 0 0 0
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "1",
          ],
        ],
      ],
      "tags": [],
      "text": "1
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "2",
          ],
        ],
      ],
      "tags": [],
      "text": "2
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "3",
          ],
        ],
      ],
      "tags": [],
      "text": "3
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Count end - 3 3 3",
          ],
        ],
      ],
      "tags": [],
      "text": "Count end - 3 3 3
",
    },
  ],
  "continues": 6,
  "errors": [],
  "menus": [],
}
`;

exports[`the fixtures that fell back for a flow's parameters > runs builtins/read-count-variable-target.sd from its chunks as the current engine does 2`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Count start - 0 0 0",
          ],
        ],
      ],
      "tags": [],
      "text": "Count start - 0 0 0
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "1",
          ],
        ],
      ],
      "tags": [],
      "text": "1
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "2",
          ],
        ],
      ],
      "tags": [],
      "text": "2
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "3",
          ],
        ],
      ],
      "tags": [],
      "text": "3
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Count end - 3 3 3",
          ],
        ],
      ],
      "tags": [],
      "text": "Count end - 3 3 3
",
    },
  ],
  "continues": 6,
  "errors": [],
  "menus": [],
}
`;

exports[`the fixtures that fell back for a flow's parameters > runs builtins/read-count-variable-target.sd from its chunks as the current engine does 3`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Count start - 0 0 0",
          ],
        ],
      ],
      "tags": [],
      "text": "Count start - 0 0 0
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "1",
          ],
        ],
      ],
      "tags": [],
      "text": "1
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "2",
          ],
        ],
      ],
      "tags": [],
      "text": "2
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "3",
          ],
        ],
      ],
      "tags": [],
      "text": "3
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Count end - 3 3 3",
          ],
        ],
      ],
      "tags": [],
      "text": "Count end - 3 3 3
",
    },
  ],
  "continues": 6,
  "errors": [],
  "menus": [],
}
`;

exports[`the fixtures that fell back for a flow's parameters > runs diverts/complex-tunnels.sd from its chunks as the current engine does 1`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "one (1)",
          ],
        ],
      ],
      "tags": [],
      "text": "one (1)
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "one and a half (1.5)",
          ],
        ],
      ],
      "tags": [],
      "text": "one and a half (1.5)
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "two (2)",
          ],
        ],
      ],
      "tags": [],
      "text": "two (2)
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "three (3)",
          ],
        ],
      ],
      "tags": [],
      "text": "three (3)
",
    },
  ],
  "continues": 5,
  "errors": [],
  "menus": [],
}
`;

exports[`the fixtures that fell back for a flow's parameters > runs diverts/complex-tunnels.sd from its chunks as the current engine does 2`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "one (1)",
          ],
        ],
      ],
      "tags": [],
      "text": "one (1)
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "one and a half (1.5)",
          ],
        ],
      ],
      "tags": [],
      "text": "one and a half (1.5)
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "two (2)",
          ],
        ],
      ],
      "tags": [],
      "text": "two (2)
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "three (3)",
          ],
        ],
      ],
      "tags": [],
      "text": "three (3)
",
    },
  ],
  "continues": 5,
  "errors": [],
  "menus": [],
}
`;

exports[`the fixtures that fell back for a flow's parameters > runs diverts/complex-tunnels.sd from its chunks as the current engine does 3`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "one (1)",
          ],
        ],
      ],
      "tags": [],
      "text": "one (1)
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "one and a half (1.5)",
          ],
        ],
      ],
      "tags": [],
      "text": "one and a half (1.5)
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "two (2)",
          ],
        ],
      ],
      "tags": [],
      "text": "two (2)
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "three (3)",
          ],
        ],
      ],
      "tags": [],
      "text": "three (3)
",
    },
  ],
  "continues": 5,
  "errors": [],
  "menus": [],
}
`;

exports[`the fixtures that fell back for a flow's parameters > runs diverts/divert-targets-with-parameters.sd from its chunks as the current engine does 1`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "5",
          ],
        ],
      ],
      "tags": [],
      "text": "5
",
    },
  ],
  "continues": 2,
  "errors": [],
  "menus": [],
}
`;

exports[`the fixtures that fell back for a flow's parameters > runs diverts/divert-targets-with-parameters.sd from its chunks as the current engine does 2`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "5",
          ],
        ],
      ],
      "tags": [],
      "text": "5
",
    },
  ],
  "continues": 2,
  "errors": [],
  "menus": [],
}
`;

exports[`the fixtures that fell back for a flow's parameters > runs diverts/divert-targets-with-parameters.sd from its chunks as the current engine does 3`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "5",
          ],
        ],
      ],
      "tags": [],
      "text": "5
",
    },
  ],
  "continues": 2,
  "errors": [],
  "menus": [],
}
`;

exports[`the fixtures that fell back for a flow's parameters > runs diverts/tunnel-onwards-divert-after-with-arg.sd from its chunks as the current engine does 1`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "8",
          ],
        ],
      ],
      "tags": [],
      "text": "8
",
    },
  ],
  "continues": 2,
  "errors": [],
  "menus": [],
}
`;

exports[`the fixtures that fell back for a flow's parameters > runs diverts/tunnel-onwards-divert-after-with-arg.sd from its chunks as the current engine does 2`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "8",
          ],
        ],
      ],
      "tags": [],
      "text": "8
",
    },
  ],
  "continues": 2,
  "errors": [],
  "menus": [],
}
`;

exports[`the fixtures that fell back for a flow's parameters > runs diverts/tunnel-onwards-divert-after-with-arg.sd from its chunks as the current engine does 3`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "8",
          ],
        ],
      ],
      "tags": [],
      "text": "8
",
    },
  ],
  "continues": 2,
  "errors": [],
  "menus": [],
}
`;

exports[`the fixtures that fell back for a flow's parameters > runs diverts/tunnel-onwards-variable-target.sd from its chunks as the current engine does 1`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "This is outer",
          ],
        ],
      ],
      "tags": [],
      "text": "This is outer
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "This is the_esc",
          ],
        ],
      ],
      "tags": [],
      "text": "This is the_esc
",
    },
  ],
  "continues": 3,
  "errors": [],
  "menus": [],
}
`;

exports[`the fixtures that fell back for a flow's parameters > runs diverts/tunnel-onwards-variable-target.sd from its chunks as the current engine does 2`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "This is outer",
          ],
        ],
      ],
      "tags": [],
      "text": "This is outer
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "This is the_esc",
          ],
        ],
      ],
      "tags": [],
      "text": "This is the_esc
",
    },
  ],
  "continues": 3,
  "errors": [],
  "menus": [],
}
`;

exports[`the fixtures that fell back for a flow's parameters > runs diverts/tunnel-onwards-variable-target.sd from its chunks as the current engine does 3`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "This is outer",
          ],
        ],
      ],
      "tags": [],
      "text": "This is outer
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "This is the_esc",
          ],
        ],
      ],
      "tags": [],
      "text": "This is the_esc
",
    },
  ],
  "continues": 3,
  "errors": [],
  "menus": [],
}
`;

exports[`the fixtures that fell back for a flow's parameters > runs diverts/tunnel-onwards-with-param-default-choice.sd from its chunks as the current engine does 1`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "8",
          ],
        ],
      ],
      "tags": [],
      "text": "8
",
    },
  ],
  "continues": 2,
  "errors": [],
  "menus": [],
}
`;

exports[`the fixtures that fell back for a flow's parameters > runs diverts/tunnel-onwards-with-param-default-choice.sd from its chunks as the current engine does 2`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "8",
          ],
        ],
      ],
      "tags": [],
      "text": "8
",
    },
  ],
  "continues": 2,
  "errors": [],
  "menus": [],
}
`;

exports[`the fixtures that fell back for a flow's parameters > runs diverts/tunnel-onwards-with-param-default-choice.sd from its chunks as the current engine does 3`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "8",
          ],
        ],
      ],
      "tags": [],
      "text": "8
",
    },
  ],
  "continues": 2,
  "errors": [],
  "menus": [],
}
`;

exports[`the fixtures that fell back for a flow's parameters > runs multiflow/multi-flow-save-load-threads.sd from its chunks as the current engine does 1`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Default line 1",
          ],
        ],
      ],
      "tags": [],
      "text": "Default line 1
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Default line 2",
          ],
        ],
      ],
      "tags": [],
      "text": "Default line 2
",
    },
  ],
  "continues": 3,
  "errors": [],
  "menus": [],
}
`;

exports[`the fixtures that fell back for a flow's parameters > runs multiflow/multi-flow-save-load-threads.sd from its chunks as the current engine does 2`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Default line 1",
          ],
        ],
      ],
      "tags": [],
      "text": "Default line 1
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Default line 2",
          ],
        ],
      ],
      "tags": [],
      "text": "Default line 2
",
    },
  ],
  "continues": 3,
  "errors": [],
  "menus": [],
}
`;

exports[`the fixtures that fell back for a flow's parameters > runs multiflow/multi-flow-save-load-threads.sd from its chunks as the current engine does 3`] = `
{
  "beats": [
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Default line 1",
          ],
        ],
      ],
      "tags": [],
      "text": "Default line 1
",
    },
    {
      "tables": [
        [
          [
            "target",
            "action",
          ],
          [
            "text",
            "Default line 2",
          ],
        ],
      ],
      "tags": [],
      "text": "Default line 2
",
    },
  ],
  "continues": 3,
  "errors": [],
  "menus": [],
}
`;
